Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8214

crt: _cwait implementation fix

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.0
    • CRT

    Description

      old implementation has cppcheck error
      [reactos/lib/sdk/crt/process/_cwait.c:31]: (error) Returning/dereferencing 'hProc' after it is deallocated / released

      wine has better implementation(presumably more correct), unfortunately no test for this api exists.

      note to commiter: editing wine.readme file might be appropriate, using wine file header or other changes...

      Attachments

        Activity

          People

            AmineKhaldi AmineKhaldi
            encoded encoded
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: