[CRT] Adopt Wine Staging 1.7.37 _cwait() implementation. CORE-8214 CORE-9246

svn path=/trunk/; revision=67134